<resources>
    <string name="app_name">MyShop</string>

    <string name="euro_label">€</string>

    <string name="title_section_shop_items">Shopping List</string>
    <string name="title_section_shop_history">History</string>

    <!-- menu -->
    <string name="menu_unselect_all">Unselect All</string>
    <string name="menu_delete_list">Delete List</string>
    <string name="menu_add_item">Add Item</string>
    <string name="menu_save_list">Save List</string>
    <string name="menu_sort_list">Sort</string>
    <string name="menu_back">Back</string>
    <string name="menu_search_list">Search</string>



    <!-- shop list section-->
    <string name="shop_list_total_price_label">Total price:</string>
    <string name="shop_list_empty">This is your shop list.\nPress the \'+\' menu button to add a new item in your list. You can also delete your list or save it when you end your shop.</string>
    <string name="shop_empty_search">Product not found</string>

    <!-- delete_shoppping_list_dialog -->
    <string name="delete_shopping_list_dialog_title">Delete entire list?</string>
    <string name="delete_shopping_list_dialog_content">If you agree all your items will be delete and they will be no more avaiable.</string>
    <string name="delete_shopping_list_dialog_agree">AGREE</string>
    <string name="delete_shopping_list_dialog_disagree">DISAGREE</string>
    <string name="delete_shopping_item_alert_empty">Your list is empty, there\'s nothing to delete</string>
    <!-- add_shopping_item_dialog -->
    <string name="add_shopping_item_dialog_title">Add new item</string>
    <string name="modify_shopping_item_dialog_title">Modify your item</string>

    <string name="add_shopping_item_dialog_content">Insert the name of the new product you want to add in your list nad some useful notes.</string>
    <string name="add_shopping_item_dialog_name">Name*:</string>
    <string name="add_shopping_item_dialog_notes">Notes:</string>
    <string name="add_shopping_item_dialog_price">Price (currency = Euro):</string>
    <string name="add_shopping_item_dialog_save">SAVE</string>
    <string name="add_shopping_item_dialog_cancel">CANCEL</string>
    <string name="add_shopping_item_name_empty">You must fill name field</string>
    <string name="add_shopping_item_insert_error">There\'s a problem with database, please retry later</string>
    <string name="add_shopping_item_insert_well_done">Your list has been saved, you can find it into the "History" tab</string>


    <!-- saveshopping_item_dialog -->
    <string name="save_shopping_item_dialog_title">Save shopping list</string>
    <string name="save_shopping_item_dialog_content">You can now save your list (put the name and some notes, like the name of the supermarket or the day)</string>
    <string name="save_shopping_item_dialog_name">Name:</string>
    <string name="save_shopping_item_dialog_notes">Notes*:</string>
    <string name="save_shopping_item_dialog_price">Price*:</string>
    <string name="save_shopping_item_dialog_save">SAVE</string>
    <string name="save_shopping_item_dialog_cancel">CANCEL</string>
    <string name="save_shopping_item_alert_empty">Your list is empty, add at least one product</string>
    <string name="save_shopping_item_alert_no_selection">*You have to check at least one product</string>

    <!-- delete_shopping_history_dialog -->
    <string name="delete_shopping_history_dialog_title">Delete entire history list?</string>
    <string name="delete_shopping_history_dialog_content">If you agree the history will be delete.</string>
    <string name="delete_shopping_history_dialog_agree">AGREE</string>
    <string name="delete_shopping_history_dialog_disagree">DISAGREE</string>
    <string name="delete_shopping_history_dialog_empty">Your list is empty, there\'s nothing to delete</string>

    <!-- history list section-->
    <string name="history_list_empty">Here there\'s your history.\nYou can see your past lists shop and if you tap one of them you can see the detail.</string>

    <!--dialog_history_list_details-->
    <string name="dialog_history_list_details_back">BACK</string>
    <string name="dialog_history_list_details_reuse">REUSE</string>
    <string name="dialog_history_list_details_reuse_success">Now your shopping list has been filled with the elements of the past shop list</string>

    <!-- dialog sort -->
    <string name="dialog_sort_title">Sort your list</string>
    <string name="dialog_sort_option_unselected">Unselected first</string>
    <string name="dialog_sort_option_selected">Selected first</string>
    <string name="dialog_sort_option_name">By name</string>
    <string name="dialog_sort_option_price">By price</string>
    <string name="dialog_sort_option_none">None</string>
    <string name="dialog_sort_back">CANCEL</string>

    <string name="dialog_search_title">Search your product</string>
    <string name="dialog_search_content">Type your product or at least its first letters</string>
    <string name="dialog_search_agree">SEARCH</string>
    <string name="dialog_search_back">CANCEL</string>

    <!-- dialog money spent -->
    <string-array name="periods_array">
        <item>@string/dialog_money_jan</item>
        <item>@string/dialog_money_feb</item>
        <item>@string/dialog_money_mar</item>
        <item>@string/dialog_money_apr</item>
        <item>@string/dialog_money_may</item>
        <item>@string/dialog_money_june</item>
        <item>@string/dialog_money_july</item>
        <item>@string/dialog_money_aug</item>
        <item>@string/dialog_money_sep</item>
        <item>@string/dialog_money_oct</item>
        <item>@string/dialog_money_nov</item>
        <item>@string/dialog_money_dec</item>
        <item>@string/dialog_money_six_month</item>
        <item>@string/dialog_money_three_month</item>
        <item>@string/dialog_money_year</item>
        <item>@string/dialog_money_month</item>
        <item>@string/dialog_money_two_month</item>
    </string-array>

    <string name="dialog_money_jan">January</string>
    <string name="dialog_money_feb">February</string>
    <string name="dialog_money_mar">March</string>
    <string name="dialog_money_apr">April</string>
    <string name="dialog_money_may">May</string>
    <string name="dialog_money_june">June</string>
    <string name="dialog_money_july">July</string>
    <string name="dialog_money_aug">August</string>
    <string name="dialog_money_sep">September</string>
    <string name="dialog_money_oct">October</string>
    <string name="dialog_money_nov">November</string>
    <string name="dialog_money_dec">September</string>
    <string name="dialog_money_month">Last month</string>
    <string name="dialog_money_three_month">Last three months</string>
    <string name="dialog_money_two_month">Last two months</string>
    <string name="dialog_money_six_month">Last six months</string>
    <string name="dialog_money_year">Last year</string>

    <string name="dialog_money_spent_title">Calculate your shop</string>
    <string name="dialog_money_spent_content">Tap one category (only history with price will be consider).</string>
    <string name="dialog_money_spent_back">BACK</string>


</resources>
