<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_back"
        android:title="@string/menu_back"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/ic_filter_remove" />
    <item
        android:id="@+id/action_search_item"
        android:title="@string/menu_add_item"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search_black_24dp" />

    <item
        android:id="@+id/action_add_item"
        android:title="@string/menu_add_item"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_plus" />

    <item
        android:id="@+id/action_save_list"
        app:showAsAction="ifRoom"
        android:title="@string/menu_save_list"
        android:icon="@drawable/ic_floppy_white_24dp" />



    <group
        android:id="@+id/settings"
        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha">

        <item
            android:id="@+id/action_unselect_list"
            app:showAsAction="ifRoom"
            android:enabled="true"
            android:title="@string/menu_unselect_all"
            />

        <item
            android:id="@+id/action_delete_list"
            app:showAsAction="ifRoom"
            android:title="@string/menu_delete_list"
            android:icon="@drawable/ic_delete_white_24dp" />
        <item
            android:id="@+id/action_sort_list"
            app:showAsAction="ifRoom"
            android:title="@string/menu_sort_list"
            android:icon="@drawable/ic_delete_white_24dp" />
    </group>


</menu>
