<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:paddingTop="24dp"
        android:paddingBottom="10dp"
        android:text="@string/dialog_sort_title"/>

        <RadioGroup
            android:id="@+id/sort_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <RadioButton
                android:id="@+id/none_radiobutton"
                android:layout_marginTop="18dp"
                android:layout_width="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_option_none"/>

            <RadioButton
                android:id="@+id/selected_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="6dp"
                android:text="@string/dialog_sort_option_selected"/>
            <RadioButton
                android:id="@+id/unselected_radiobutton"
                android:layout_marginTop="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_option_unselected"/>

            <RadioButton
                android:id="@+id/price_radiobutton"
                android:layout_marginTop="18dp"
                android:layout_width="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_option_price"/>


            <RadioButton
                android:id="@+id/name_radiobutton"
                android:layout_marginTop="18dp"
                android:layout_width="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_option_name"/>





        </RadioGroup>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/negative_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            android:padding="6dp"
            android:text="@string/dialog_sort_back"/>

    </RelativeLayout>

</LinearLayout>