<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:paddingTop="24dp"
        android:paddingBottom="10dp"
        android:text="@string/delete_shopping_history_dialog_title"/>
    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="10dp"
        android:paddingBottom="24dp"
        android:text="@string/delete_shopping_history_dialog_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/negative_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:padding="4dp"
            android:textColor="@color/colorAccent"
            android:layout_toLeftOf="@id/positive_btn"
            android:layout_marginRight="8dp"
            android:text="@string/delete_shopping_history_dialog_disagree"/>
        <TextView
            android:id="@+id/positive_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            android:padding="4dp"
            android:text="@string/delete_shopping_history_dialog_agree"/>

    </RelativeLayout>

</LinearLayout>