<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:paddingTop="24dp"
        android:paddingBottom="10dp"
        android:text="@string/save_shopping_item_dialog_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/save_shopping_item_dialog_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="4dp"
            android:paddingBottom="10dp">
            <TextView
                android:id="@+id/name_label"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_alignBottom="@+id/name_edit"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/save_shopping_item_dialog_name"/>
            <EditText
                android:id="@+id/name_edit"
                android:lines="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@id/name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp" />
            <TextView
                android:id="@+id/notes_label"
                android:layout_alignParentStart="true"
                android:layout_marginTop="18dp"
                android:layout_alignBottom="@id/notes_edit"
                android:layout_width="wrap_content"
                android:layout_below="@+id/name_label"
                android:layout_height="wrap_content"
                android:text="@string/save_shopping_item_dialog_notes"/>
            <EditText
                android:id="@+id/notes_edit"
                android:lines="1"
                android:layout_marginStart="5dp"
                android:layout_below="@id/name_edit"
                android:layout_toEndOf="@id/notes_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                />
            <TextView
                android:id="@+id/price_label"
                android:layout_alignParentStart="true"
                android:layout_marginTop="18dp"
                android:layout_width="wrap_content"
                android:layout_below="@+id/notes_label"
                android:layout_height="wrap_content"
                android:text="@string/save_shopping_item_dialog_price"/>
            <EditText
                android:id="@+id/price_edit"
                android:lines="1"
                android:inputType="numberDecimal"
                android:layout_marginStart="5dp"
                android:layout_below="@id/notes_edit"
                android:layout_toEndOf="@id/price_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/save_shopping_list_warning"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="4dp"
            android:paddingBottom="10dp"
            android:visibility="gone"
            android:textColor="@color/colorWaring"
            android:text="@string/save_shopping_item_alert_no_selection"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/positive_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            android:padding="6dp"
            android:text="@string/add_shopping_item_dialog_save"/>
        <TextView
            android:id="@+id/negative_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:padding="6dp"
            android:textColor="@color/colorAccent"
            android:layout_toStartOf="@id/positive_btn"
            android:layout_marginRight="8dp"
            android:text="@string/add_shopping_item_dialog_cancel"/>

    </RelativeLayout>

</LinearLayout>