<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:paddingTop="24dp"
        android:paddingBottom="10dp"
        android:text="@string/add_shopping_item_dialog_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/add_shopping_item_dialog_content"/>
        <ListView
            android:id="@+id/history_details"
            android:layout_width="match_parent"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="205dp"/>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/positive_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            android:padding="6dp"
            android:text="@string/dialog_history_list_details_back"/>
        <TextView
            android:id="@+id/negative_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:padding="6dp"
            android:textColor="@color/colorAccent"
            android:layout_toStartOf="@id/positive_btn"
            android:layout_marginRight="8dp"
            android:visibility="visible"
            android:text="@string/dialog_history_list_details_reuse"/>

    </RelativeLayout>

</LinearLayout>