<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:paddingTop="24dp"
        android:paddingBottom="10dp"
        android:text="@string/dialog_money_spent_title"/>
    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/dialog_money_spent_content"/>
    <ListView
        android:id="@+id/periods"
        android:layout_width="match_parent"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="10dp"
        android:divider="@color/material_blue_grey_800"
        android:paddingBottom="10dp"
        android:layout_height="350dp"/>
    <TextView
        android:id="@+id/period_result"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="24dp"
        android:paddingTop="12dp"
        android:textSize="18dp"
        android:text=" - "/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/positive_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            android:padding="6dp"
            android:text="@string/dialog_money_spent_back"/>

    </RelativeLayout>
</LinearLayout>